<resources>
    <string name="app_name">NewspaperApp</string>
    
    //Login
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_createAccount">Create Account</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_google">Google</string>
    <string name="login_emailPassword_incomplete">Digite seu e-mail e sua senha</string>
    <string name="login_createAccount_sucessful">Usuário cadastrado com SUCESSO!</string>

</resources>